# src/auth/auth.controller.ts
@@ -9,22 +9,16 @@ import {
     Request,
 } from 'tsoa';
 
-import { ISignIn, ISignUp } from './auth.dto';
-import { 
-    IAuthSuccessResponse,
-    IAuthBadResponse, 
-    AuthService, 
-    IAuthResponse
-} from './auth.service';
-import { IUser } from 'user/user.dto';
+import { IBadResponse, ISignIn, ISignUp } from './auth.dto';
+import { IAuthUser } from '../user/user.dto';
 
 @Route('auth')
 @Tags('Auth')
 export class AuthController extends Controller {
     // SignUp
-    @Response<IAuthBadResponse>(422, 'Validation Failed')
-    @Response<IAuthResponse>(200, 'OK')
-    @Example<IAuthResponse>({
+    @Response<IBadResponse>(400, 'Validation Failed')
+    @Response(200, 'OK')
+    @Example<IAuthUser>({
         user: {
             id: '1',
             first_name: 'Valeria',
@@ -32,24 +26,30 @@ export class AuthController extends Controller {
             email: 'test@gmail.com',
             role: 'photograph'
         },
-        status:200, 
-        access_token: 'your access_token', 
-        refresh_token: 'your refresh_token'
+        authentication: {
+            access_token: 'your access_token', 
+            refresh_token: 'your refresh_token'
+        }
     })
     @Post('signup')
     public async SignUp(
-        @Request() user: IUser,
-        @Request() response: IAuthSuccessResponse,
+        @Request() user: IAuthUser,
         @Body() _requestBody?: ISignUp,
-    ): Promise<IAuthResponse | IAuthBadResponse> {
-        console.log('request in controller', response);
-        return new AuthService().SignUp(user, response);
+    ): Promise<IAuthUser | IBadResponse> {
+        try {
+            return user;
+        }
+        catch (err) {
+            return {
+                reason: err.message
+            }
+        }
     }
 
     // SignIn
-    @Response<IAuthBadResponse>(422, 'Validation Failed')
-    @Response<IAuthResponse>(200, 'OK')
-    @Example<IAuthResponse>({
+    @Response<IBadResponse>(400, 'Validation Failed')
+    @Response(200, 'OK')
+    @Example<IAuthUser>({
         user: {
             id: '1',
             first_name: 'Valeria',
@@ -57,16 +57,23 @@ export class AuthController extends Controller {
             email: 'test@gmail.com',
             role: 'photograph'
         },
-        status:200, 
-        access_token: 'your access_token', 
-        refresh_token: 'your refresh_token'
+        authentication: {
+            access_token: 'your access_token', 
+            refresh_token: 'your refresh_token'
+        }
     })
     @Post('signin')
     public async SignIn(
-        @Request() user: IUser,
-        @Request() response: IAuthSuccessResponse,
+        @Request() user: IAuthUser,
         @Body() _requestBody?: ISignIn
-    ): Promise<IAuthResponse | IAuthBadResponse> {
-        return new AuthService().SignIn(user, response);
+    ): Promise<IAuthUser | IBadResponse> {
+        try {
+            return user;
+        }
+        catch (err) {
+            return {
+                reason: err.message
+            }
+        }
     }
 }
